[gd_scene load_steps=2 format=3 uid="uid://swx1ag0pr6hh"]

[ext_resource type="Script" path="res://ui/battle_canvas_layer.gd" id="1_pg7py"]

[node name="BattleCanvasLayer" type="CanvasLayer"]
script = ExtResource("1_pg7py")

[node name="BattleMenuControl" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Backdrop" type="ColorRect" parent="BattleMenuControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.342207, 0.342207, 0.342207, 0.475)

[node name="Label" type="Label" parent="BattleMenuControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -128.0
offset_right = 238.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 85
text = "Demo Field"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BattleMenuControl"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="RestartLevel" type="Button" parent="BattleMenuControl/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Restart Level"

[node name="ExitLevel" type="Button" parent="BattleMenuControl/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Exit Level"

[node name="QuitGame" type="Button" parent="BattleMenuControl/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Quit Game"
